--- a/src/components/CallToAction/CallToAction.scss
+++ b/src/components/CallToAction/CallToAction.scss
@@ -5,7 +5,7 @@
   align-content: center;
   text-align: center;
   flex-direction: column;
-  padding: 1.25rem 1rem;
+  padding: $spacing-extra-big $spacing-big;
   h1 {
     margin-top: 0;
     font-weight: 400;
