--- a/src/css/variables/_layout.scss
+++ b/src/css/variables/_layout.scss
@@ -1,3 +1,4 @@
 $spacing-small: 0.25rem;
 $spacing-medium: 0.5rem;
 $spacing-big: 1rem;
+$spacing-extra-big: 1.25rem;
